fix: incorrect logic for determining if search is ongoing, less layout shifts  (#313)
* fix: incorrect logic for determining if search is ongoing, less layout shifts

* fix: remove stray console.log

--- a/src/theme/extras/_search.scss
+++ b/src/theme/extras/_search.scss
@@ -106,4 +106,10 @@ body.search-modal-opened {
       }
     }
   }
+  .searchSpinnerWrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem 0;
+  }
 }
